src/objects/Bot_Dialog__c.object
<CustomObject>
    <fields>
        <fullName>Bot_Name__c</fullName>
        <description>API name of the Bot that this Dialog belongs to.</description>
        <label>Bot Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Bot Dialogs</relationshipLabel>
        <relationshipName>Bot_Dialogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dialog_Name__c</fullName>
        <label>Dialog Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Name__c</fullName>
        <label>Goal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Solution</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Escalate</fullName>
                </value>
                <value>
                    <fullName>Navigation</fullName>
                </value>
                <value>
                    <fullName>Next</fullName>
                </value>
                <value>
                    <fullName>Rating</fullName>
                </value>
                <value>
                    <fullName>Back</fullName>
                </value>
                <value>
                    <fullName>Confusion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bot Dialog</label>
    <nameField>
        <displayFormat>BD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Dialogs</pluralLabel>
    <recordTypes>
        <fullName>Dialog</fullName>
        <active>true</active>
        <description>Record Type to capture Dialogs associated to a Goal</description>
        <label>Dialog</label>
    </recordTypes>
    <recordTypes>
        <fullName>Goal</fullName>
        <active>true</active>
        <description>Record Type to capture a Goal</description>
        <label>Goal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>